--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "node-appwrite": "^12.0.1",
+    "plaid": "^23.0.0",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
