--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "plaid": "^23.0.0",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-plaid-link": "^3.5.1",
     "tailwind-merge": "^2.3.0",
